[metadata]
name = stactools-alos-dem
version = attr: stactools.alos_dem.__version__
description = Create STAC items from ALOS Global Digital Surface Model data
long_description = file: README.md
long_description_content_type = text/markdown
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
url = https://github.com/stactools-packages/alos-dem
project_urls =
    Documentation = https://stactools-alos-dem.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/alos-dem/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    ALOS
    dem
    elevation
    raster
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1

[options.packages.find]
where = src
